soc/imgtec/pistachio: Implement hard_reset()
Verified boot needs hard_reset() now, so offer a dummy implementation
for the Imagination chip. Sorry, I don't have the specs for this chip
anymore to make a real implementation, but I would like to keep this
code from bit rotting.

Change-Id: I15aa47f7d248b99901a2ac0e65a46b43d7718717
Signed-off-by: Stefan Reinauer <stefan.reinauer@coreboot.org>
Reviewed-on: https://review.coreboot.org/12723
Tested-by: build bot (Jenkins)
Reviewed-by: Vadim Bendebury <vbendeb@chromium.org>

--- a/src/soc/imgtec/pistachio/Kconfig
+++ b/src/soc/imgtec/pistachio/Kconfig
@@ -21,6 +21,7 @@ config CPU_IMGTEC_PISTACHIO
 	select HAVE_UART_SPECIAL
 	select SPI_ATOMIC_SEQUENCING
 	select GENERIC_GPIO_LIB
+	select HAVE_HARD_RESET
 	bool
 
 if CPU_IMGTEC_PISTACHIO
