--- a/src/soc/imgtec/pistachio/Makefile.inc
+++ b/src/soc/imgtec/pistachio/Makefile.inc
@@ -33,6 +33,7 @@ bootblock-y += monotonic_timer.c
 ramstage-y += cbmem.c
 ramstage-y += monotonic_timer.c
 ramstage-y += soc.c
+ramstage-y += reset.c
 
 romstage-y += cbmem.c
 romstage-y += ddr2_init.c
