Drop src/cpu/ indirection for MIPS
Change-Id: I406166e650e07851ab1b293450fa29da8af075d9
Signed-off-by: Stefan Reinauer <stefan.reinauer@coreboot.org>
Reviewed-on: https://review.coreboot.org/12724
Tested-by: build bot (Jenkins)
Reviewed-by: Vadim Bendebury <vbendeb@chromium.org>

--- a/src/soc/imgtec/pistachio/Kconfig
+++ b/src/soc/imgtec/pistachio/Kconfig
@@ -15,7 +15,10 @@
 #
 
 config CPU_IMGTEC_PISTACHIO
-	select CPU_MIPS
+	select ARCH_BOOTBLOCK_MIPS
+	select ARCH_VERSTAGE_MIPS
+	select ARCH_ROMSTAGE_MIPS
+	select ARCH_RAMSTAGE_MIPS
 	select GENERIC_UDELAY
 	select HAVE_MONOTONIC_TIMER
 	select HAVE_UART_SPECIAL
