--- a/Makefile.inc
+++ b/Makefile.inc
@@ -301,6 +301,8 @@ endif
 
 CPPFLAGS_common := -Isrc -Isrc/include -Isrc/commonlib/include -I$(obj)
 CPPFLAGS_common += -Isrc/device/oprom/include
+VB_SOURCE ?= 3rdparty/vboot
+CPPFLAGS_common += -I$(VB_SOURCE)/firmware/include
 CPPFLAGS_common += -include $(src)/include/kconfig.h
 
 CFLAGS_common += -pipe -g -nostdinc
