--- a/src/drivers/intel/fsp1_1/Kconfig
+++ b/src/drivers/intel/fsp1_1/Kconfig
@@ -105,7 +105,7 @@ config FSP_USES_UPD
 
 config GOP_SUPPORT
 	bool "Enable GOP support"
-	default y
+	default n
 
 config ROMSTAGE_RAM_STACK_SIZE
 	hex "Size of the romstage RAM stack in bytes"
