ectool: fix NetBSD compilation
Since NetBSD does not support uname -o, push check for CygWin
inside separate non-failing condition in Makefile.

Change-Id: Ibd264384f49b33412f0ef8554bd9c9fb8f60a892
Signed-off-by: Andrey Korolyov <andrey@xdel.ru>
Reviewed-on: https://review.coreboot.org/12831
Tested-by: build bot (Jenkins)
Reviewed-by: Patrick Georgi <pgeorgi@google.com>

--- a/util/ectool/Makefile
+++ b/util/ectool/Makefile
@@ -19,10 +19,14 @@ CFLAGS = -O2 -Wall -W
 PROGRAM = ectool
 INSTALL = /usr/bin/install
 PREFIX  = /usr/local
+OS_ARCH = $(shell uname)
 
-OS_ARCH = $(shell uname -o)
-ifeq ($(OS_ARCH), Cygwin)
+ifeq ($(shell uname -o 2>/dev/null), Cygwin)
 LDFLAGS = -lioperm
+endif
+
+ifeq ($(OS_ARCH), NetBSD)
+LDFLAGS = -l$(shell uname -p)
 endif
 
 all: $(PROGRAM)
