google/gale: Enable Giga Device SPI flash support
BUG=chrome-os-partner:49249
TEST=Able to read content from SPI NOR, with boards having Giga Device SPI Flash
BRANCH=none

Change-Id: I67dc981a8c0270d55b01bdc4506139cccd8e90a7
Signed-off-by: Patrick Georgi <pgeorgi@chromium.org>
Original-Commit-Id: 417701816e8a298ba999d2c2d0d058cf7b54fb6f
Original-Change-Id: Id09ef68b13c53a2ab44f77c12dad39b505c81071
Original-Signed-off-by: Varadarajan Narayanan <varada@codeaurora.org>
Original-Reviewed-on: https://chromium-review.googlesource.com/333320
Original-Commit-Ready: David Hendricks <dhendrix@chromium.org>
Original-Reviewed-by: David Hendricks <dhendrix@chromium.org>
Reviewed-on: https://review.coreboot.org/14661
Tested-by: build bot (Jenkins)
Reviewed-by: Martin Roth <martinroth@google.com>

--- a/src/mainboard/google/gale/Kconfig
+++ b/src/mainboard/google/gale/Kconfig
@@ -25,6 +25,7 @@ config BOARD_SPECIFIC_OPTIONS
 	select HAVE_HARD_RESET
 	select MAINBOARD_HAS_CHROMEOS
 	select SPI_FLASH
+	select SPI_FLASH_GIGADEVICE
 	select SPI_FLASH_SPANSION
 	select SPI_FLASH_STMICRO
 	select DRIVERS_UART
