--- a/src/arch/x86/Makefile.inc
+++ b/src/arch/x86/Makefile.inc
@@ -68,6 +68,11 @@ else
 LDFLAGS_bootblock += -m elf_x86_64 --oformat elf64-x86-64
 endif
 
+bootblock-y += boot.c
+bootblock-y += memcpy.c
+bootblock-y += memset.c
+bootblock-y += mmap_boot.c
+
 # Add the assembly file that pulls in the rest of the dependencies in
 # the right order. Make sure the auto generated bootblock.inc is a proper
 # dependency. Make the same true for the linker sript.
