--- a/src/soc/intel/skylake/Kconfig
+++ b/src/soc/intel/skylake/Kconfig
@@ -176,4 +176,14 @@ config NHLT_SSM4567
 	help
 	  Include DSP firmware settings for ssm4567 smart amplifier.
 
+config DCACHE_RAM_SIZE_TOTAL
+	hex
+	default 0x40000
+
+config SKIP_FSP_CAR
+        bool "Skip cache as RAM setup in FSP"
+        default y
+        help
+          Skip Cache as RAM setup in FSP.
+
 endif
