lib: compile mdelay for bootblock
Mediatek's bootblock needs mdelay, which depends on a udelay
implementation. Compiling the file for bootblock poses no harm:
Either udelay exists (in which case mdelay is usable) or it doesn't in
which case we see exactly the same kind of build time error (just with
udelay instead of mdelay).

Change-Id: I7037308d2d79c5cb1b05bb2b57a0912ad11cd7a6
Signed-off-by: Patrick Georgi <pgeorgi@chromium.org>
Reviewed-on: https://review.coreboot.org/13049
Tested-by: build bot (Jenkins)
Reviewed-by: Martin Roth <martinroth@google.com>

--- a/src/lib/Makefile.inc
+++ b/src/lib/Makefile.inc
@@ -32,7 +32,7 @@ bootblock-$(CONFIG_COLLECT_TIMESTAMPS) += timestamp.c
 endif
 
 bootblock-$(CONFIG_CONSOLE_CBMEM) += cbmem_console.c
-bootblock-$(CONFIG_I2C_TPM) += delay.c
+bootblock-y += delay.c
 bootblock-y += memchr.c
 bootblock-y += memcmp.c
 bootblock-y += boot_device.c
